# react-native-fast-crypto

./: .gitignore  .npmignore  CONTRIBUTING.md  FastCrypto.podspec  LICENSE  README.md  jest.config.js  package.json  tsconfig.json
.agents/skills/crypto-perf-analyzer/: SKILL.md
.claude/skills/: crypto-perf-analyzer.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
__tests__/benchmarks/: crypto-bench.ts
__tests__/unit/: native-mock.test.ts  utils.test.ts
android/: CMakeLists.txt  build.gradle
android/libs/include/openssl/: opensslconf.h
android/src/main/java/com/fastcrypto/: FastCryptoModule.kt  FastCryptoPackage.kt
android/src/main/jni/: fast_crypto_jni.cpp
cpp/: CMakeLists.txt  argon2_ref.cpp  argon2_ref.h  fast_crypto_core.cpp  fast_crypto_core.h  memory_guard.h  thread_pool.h
example/: Gemfile  app.json  index.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/fastcrypto/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/FastCryptoExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/FastCryptoExample.xcodeproj/: project.pbxproj
example/ios/FastCryptoExample.xcodeproj/xcshareddata/xcschemes/: FastCryptoExample.xcscheme
example/src/: App.tsx
ios/: FastCrypto.h  FastCrypto.mm  SecureEnclaveHelper.swift
scripts/: build-openssl-android.sh  generate-codegen.sh  trim-openssl-headers.sh  verify-memory-hygiene.sh
src/: NativeFastCrypto.ts  index.tsx  multiply.native.tsx  multiply.tsx  types.ts  utils.ts
